--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="12dp"
     android:background="@color/windowBackground"
     tools:context=".ui.onboard.BoardFragment">
 
@@ -12,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_alignParentStart="true"
+        android:visibility="gone"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         app:lottie_autoPlay="true"
