--- a/app/src/main/res/layout/fragment_create_tasks.xml
+++ b/app/src/main/res/layout/fragment_create_tasks.xml
@@ -44,7 +44,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
         android:padding="16dp"
-        android:textColorHint="?attr/textColor"
+        android:inputType="textCapSentences"
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/hint_color"
         android:hint="@string/task"
         app:borderWidth="2dp"
         app:cornerRadius="8dp"
@@ -58,16 +60,17 @@
         android:layout_height="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/cr_editText"
-        app:srcCompat="@drawable/ic_send" />
+        app:srcCompat="@drawable/ic_done" />
 
     <ImageView
         android:id="@+id/mic_task"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:visibility="gone"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
