--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,12 @@
             android:id="@+id/nav_achievements"
             android:icon="@drawable/ic_done"
             android:title="@string/achievement_app" />
+
+        <item
+            android:id="@+id/nav_standup"
+            android:icon="@drawable/ic_standup"
+            android:title="Standup" />
+
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/fab_stopwatch"
