-Добавил экран для Новых навыков

--- a/app/src/main/res/layout/fragment_create_tasks.xml
+++ b/app/src/main/res/layout/fragment_create_tasks.xml
@@ -24,6 +24,10 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <nl.dionsegijn.konfetti.KonfettiView
+        android:id="@+id/viewKonfetti"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cr_recycler"
