--- a/app/src/main/res/layout/timing_item.xml
+++ b/app/src/main/res/layout/timing_item.xml
@@ -16,12 +16,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/minutes_amount"
+        android:id="@+id/hour_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginTop="50dp"
-        android:text="20 минут"
         android:textColor="?attr/textColor"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,12 +28,11 @@
         app:layout_constraintTop_toBottomOf="@id/timer_task_title" />
 
     <TextView
-        android:id="@+id/task_day"
+        android:id="@+id/created_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         app:layout_constraintTop_toBottomOf="@id/timer_task_title"
-        android:text="1 августа"
         android:textColor="?attr/textColor"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@id/task_day"
+        app:layout_constraintTop_toBottomOf="@id/created_date"
         android:layout_marginTop="20dp"/>
 
 
