--- a/app/src/main/res/layout/create_category_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/create_category_bottom_sheet_dialog.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <androidx.cardview.widget.CardView
             android:id="@+id/title_card"
             android:layout_width="match_parent"
@@ -75,6 +76,16 @@
             app:backgroundTint="?attr/toolbarColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title_wrapper" />
+
+        <TextView
+            android:id="@+id/icon_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/icon_button"
+            app:layout_constraintTop_toBottomOf="@id/title_wrapper"
+            app:layout_constraintBottom_toTopOf="@id/apply_button"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/apply_button"
