--- a/app/src/main/res/layout/create_habit_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/create_habit_bottom_sheet_dialog.xml
@@ -76,17 +76,45 @@
             android:text="@string/icon"
             app:backgroundTint="?attr/toolbarColor"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title_wrapper" />
+            app:layout_constraintTop_toBottomOf="@id/day_picker" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/day_button"
+        <TextView
+            android:id="@+id/icon_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/icon_button"
+            app:layout_constraintTop_toBottomOf="@id/day_picker"
+            app:layout_constraintBottom_toBottomOf="@id/icon_button"/>
+
+        <TextView
+            android:id="@+id/set_day_hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/title_wrapper"
+            app:layout_constraintBottom_toBottomOf="@id/day_picker"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text="Укажите количество дней"
+            android:textColor="?attr/textColor"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@id/day_picker"/>
+
+        <NumberPicker
+            android:id="@+id/day_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/set_day_hint"
+            app:layout_constraintTop_toBottomOf="@id/title_wrapper"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/apply_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:drawableEnd="@drawable/ic_today"
-            android:drawablePadding="4dp"
             android:elevation="8dp"
-            android:text="@string/days_amount"
+            android:text="@string/apply"
             app:backgroundTint="?attr/toolbarColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/icon_button" />
