--- a/app/src/main/res/layout/dialog_icon.xml
+++ b/app/src/main/res/layout/dialog_icon.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardUseCompatPadding="true"
-    app:cardElevation="4dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
-    android:layout_height="wrap_content">
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/icon_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        tools:listitem="@layout/item_icon"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="4" />
+        app:spanCount="4"
+        tools:listitem="@layout/item_icon" />
+
+    </androidx.core.widget.NestedScrollView>
 </androidx.cardview.widget.CardView>
