--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -41,7 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="12dp"
-            android:text="@string/planner"
+            android:text="@string/app_name"
             android:textColor="?attr/toolbarColor"
             android:textSize="30sp" />
 
