--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.timing.TimerFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -12,16 +12,19 @@
         android:layout_height="match_parent"
         android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/image_timerPhone"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/manager_animation"
             android:layout_width="match_parent"
             android:layout_height="350dp"
-            android:layout_marginBottom="50dp"
-            android:src="@drawable/icget"
-            app:layout_constraintBottom_toTopOf="@id/timer_task_edit"
+            android:layout_alignParentStart="true"
+            app:layout_constraintBottom_toTopOf="@id/what_do_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="managers.json"
+            app:lottie_loop="true" />
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -36,23 +39,24 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/what_do_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="70dp"
             android:text="@string/what_are_doing"
             android:textColor="?attr/textColor"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/timer_task_edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_timerPhone" />
+            app:layout_constraintTop_toBottomOf="@id/manager_animation" />
 
         <EditText
             android:id="@+id/timer_task_edit"
             android:layout_width="320dp"
             android:layout_height="50dp"
-            android:layout_marginTop="340dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/edit_text_background"
+            android:hint="@string/read"
             android:inputType="textCapSentences"
             android:maxLength="21"
             android:textAlignment="center"
@@ -62,14 +66,13 @@
             app:layout_constraintBottom_toTopOf="@id/timer_task_apply"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/what_do_tv" />
 
         <Button
             android:id="@+id/timer_task_apply"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:layout_marginBottom="230dp"
+           android:layout_marginVertical="30dp"
             android:background="@drawable/rectangle_bg"
             android:text="@string/apply"
             android:textColor="#FFF"
@@ -86,29 +89,36 @@
         android:layout_height="match_parent"
         android:visibility="gone">
 
-        <ImageView
-            android:id="@+id/bgcircle"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/clock_animation"
             android:layout_width="276dp"
             android:layout_height="247dp"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
             android:layout_marginTop="50dp"
-            android:src="@drawable/bgcircle"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.464"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="working-man.json"
+            app:lottie_loop="true" />
 
-        <ImageView
-            android:id="@+id/icanchor"
-            android:layout_width="358dp"
-            android:layout_height="357dp"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/mg_animation"
+            android:layout_width="276dp"
+            android:layout_height="247dp"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:src="@drawable/icanchor"
+            android:layout_marginTop="50dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.464"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="managers.json"
+            app:lottie_loop="true" />
 
         <TextView
             android:id="@+id/countdown_text"
@@ -167,7 +177,7 @@
             app:layout_constraintTop_toBottomOf="@id/countdown_text" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/count_time"
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_marginTop="50dp"
@@ -184,14 +194,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/close_button"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_exit" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
