--- a/app/src/main/res/layout/item_habit.xml
+++ b/app/src/main/res/layout/item_habit.xml
@@ -58,13 +58,14 @@
             tools:text="10/10" />
 
 
-        <ImageView
+        <TextView
             android:id="@+id/habit_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
