--- a/app/src/main/res/layout/item_icon.xml
+++ b/app/src/main/res/layout/item_icon.xml
@@ -9,10 +9,11 @@
     app:cardUseCompatPadding="true"
     android:padding="12dp">
 
-    <ImageView
+    <TextView
         android:id="@+id/icon_view"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_home" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:text="❤️"/>
 
 </androidx.cardview.widget.CardView>
