--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -102,10 +102,10 @@
         <action
             android:id="@+id/action_createTasksFragment_to_category_fragment"
             app:destination="@id/category_fragment" />
+
         <argument
-            android:name="category"
-            android:defaultValue="default"
-            app:argType="string" />
+            android:name="model"
+            app:argType="com.lawlett.planner.data.room.models.CategoryModel" />
 
     </fragment>
     <fragment
@@ -143,15 +143,5 @@
         android:name="com.lawlett.planner.ui.standup.MainCreateStandUpFragment"
         android:label="fragment_create_stand_up_main"
         tools:layout="@layout/fragment_create_stand_up_main" />
-    <fragment
-        android:id="@+id/questionFragment"
-        android:name="com.lawlett.planner.ui.questionanswer.QuestionFragment"
-        android:label="fragment_question"
-        tools:layout="@layout/fragment_question" />
-    <fragment
-        android:id="@+id/answerFragment"
-        android:name="com.lawlett.planner.ui.questionanswer.AnswerFragment"
-        android:label="fragment_answer"
-        tools:layout="@layout/fragment_answer" />
 
 </navigation>
