-Добавил Профиль юзера -Тайминг подкорректировал

--- a/app/src/main/res/drawable/create_event_edittext_background.xml
+++ b/app/src/main/res/drawable/create_event_edittext_background.xml
@@ -4,7 +4,7 @@
     <item >
         <shape>
             <stroke android:color="?attr/create_event_editText" android:width="1dp"/>
-            <corners android:radius="15dp"></corners>
+            <corners android:radius="15dp" />
         </shape>
     </item>
 </selector>
