--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>"
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="colorAccent">?attr/textColor</item>
     </style>
 
     <style name="AppTheme.Green" parent="AppTheme.NoActionBar">
