--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -72,7 +72,7 @@
             android:id="@+id/timer_task_apply"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-           android:layout_marginVertical="30dp"
+            android:layout_marginVertical="30dp"
             android:background="@drawable/rectangle_bg"
             android:text="@string/apply"
             android:textColor="#FFF"
@@ -89,6 +89,18 @@
         android:layout_height="match_parent"
         android:visibility="gone">
 
+        <TextView
+            android:id="@+id/skill_name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?attr/textColor"
+            android:textSize="30sp"
+            android:visibility="gone"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/clock_animation"
             android:layout_width="276dp"
@@ -100,7 +112,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.464"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/skill_name_tv"
             app:lottie_autoPlay="true"
             app:lottie_fileName="working-man.json"
             app:lottie_loop="true" />
@@ -124,7 +136,7 @@
             android:id="@+id/countdown_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="12dp"
             android:text="@string/time"
             android:textColor="?attr/textColor"
             android:textSize="35sp"
@@ -132,7 +144,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/clock_animation" />
 
         <Button
             android:id="@+id/countdown_button"
