--- a/app/src/main/res/layout/create_habit_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/create_habit_bottom_sheet_dialog.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:padding="16dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
@@ -78,6 +79,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/day_picker" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/remind_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:drawableEnd="@drawable/ic_notification"
+            android:drawablePadding="4dp"
+            android:elevation="8dp"
+            android:text="@string/remind"
+            android:textAllCaps="false"
+            app:backgroundTint="?attr/toolbarColor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/icon_button" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/remind_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:elevation="8dp"
+            android:textColor="?attr/textColor"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/remind_button"
+            app:layout_constraintEnd_toEndOf="@+id/icon_tv"
+            app:layout_constraintStart_toStartOf="@+id/icon_tv"
+            app:layout_constraintTop_toTopOf="@id/remind_button"
+            tools:text="12:40" />
+
+
         <TextView
             android:id="@+id/icon_tv"
             android:layout_width="wrap_content"
@@ -117,7 +146,7 @@
             android:text="@string/apply"
             app:backgroundTint="?attr/toolbarColor"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/icon_button" />
+            app:layout_constraintTop_toBottomOf="@id/remind_button" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
