--- a/app/src/main/res/layout/dialog_icon.xml
+++ b/app/src/main/res/layout/dialog_icon.xml
@@ -8,18 +8,23 @@
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/icon_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="4"
-        tools:listitem="@layout/item_icon" />
+        <include
+            android:id="@+id/title_card"
+            layout="@layout/title_layout" />
 
-    </androidx.core.widget.NestedScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/icon_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/title_card"
+            app:spanCount="4"
+            tools:listitem="@layout/item_icon" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
