--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -18,8 +18,7 @@
             android:id="@+id/task_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-       />
+            android:layout_margin="16dp" />
 
         <TextView
             android:id="@+id/task_tv"
@@ -27,10 +26,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
             android:textSize="20sp"
             tools:text="Text" />
 
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
