--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
+    android:id="@+id/title_card"
     app:cardCornerRadius="8dp"
     app:cardElevation="8dp"
+    android:foreground="?attr/selectableItemBackground"
     app:cardUseCompatPadding="true">
 
     <TextView
