--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="plus_background">#FFF</color>
     <color name="bottom_navigation_background">#0365C4</color>
     <color name="settings_text_color">#FFF</color>
-    <color name="hint_color">#aaa</color>
+    <color name="hint_color">#AAA3A3</color>
 
    <color name="night_blue">#162C53</color>
     <color name="light_blue">#0365C4</color>
